--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: sans-serif;
+  margin: 0;
+  background-image: url('assets/back.jpg');
+  background-size: cover;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
