--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,13 +23,13 @@
 
 .gameHeader{
   text-align: center;
-  padding: 10px 0 35px 0;
+  padding: 10px 0 25px 0;
 }
 
 .scene {
   display: inline-block;
-  width: 22%;
-  height: 22%;
+  width: 18%;
+  height: 18%;
   margin: 10px;
   perspective: 600px;
 }
@@ -45,6 +45,16 @@
   border-radius: 10px;
 }
 
+@keyframes winAnimation{
+  50%{transform: scale(1)}
+  75%{transform: scale(.8)}
+  100%{transform: scale(1)}
+}
+
+.cardWin{
+  animation: 1s "winAnimation";
+}
+
 .card.is-flipped {
   transform: translateX(-100%) rotateY(-180deg);
 }
@@ -58,7 +68,13 @@
   -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+  transition: .5s;
 }
+
+/* .card__face:active{
+  transform: scale(.9);
+  transition: .1s;
+} */
 
 .card__face--front {
   background-image: url("../assets/cardFront.jpg");
@@ -173,9 +189,9 @@
 
 @media screen and (max-width: 600px) {
   .scene {
-    width: 32%;
-    height: 18%;
-    margin: .66%;
+    width: 25%;
+    height: 14%;
+    margin: 2% 4%;
   }
 
   .card__face {
