--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .playArea {
   height: 90vh;
-  max-width: 920px;
+  max-width: 900px;
   width: 100%;
   margin: auto
 }
@@ -28,8 +28,8 @@
 
 .scene {
   display: inline-block;
-  width: 18%;
-  height: 18%;
+  width: 130px;
+  height: 130px;
   margin: 10px;
   perspective: 600px;
 }
@@ -189,9 +189,9 @@
 
 @media screen and (max-width: 600px) {
   .scene {
-    width: 25%;
-    height: 14%;
-    margin: 2% 4%;
+    width: 90px;
+    height: 90px;
+    margin: 2% 4.5%;
   }
 
   .card__face {
