--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,13 @@
     <button mat-raised-button (click)="shuffle(monkeys)" class="button">Shuffle</button>
     <button mat-raised-button (click)="restart()" class="button">Restart</button>
   </div> -->
-  <div *ngFor="let monkey of monkeys" class="scene scene--card {{monkey.matched ? 'cardWin' : ''}}">
+  <div
+    *ngFor="let monkey of monkeys"
+    class="scene scene--card {{ monkey.matched ? 'cardWin' : '' }}"
+  >
     <div
       class="card"
-      (click)=" !monkey.isFlipped ? cardClick(monkey) : ''"
+      (click)="!monkey.isFlipped ? cardClick(monkey) : ''"
       [ngClass]="{ 'is-flipped': monkey.isFlipped }"
     >
       <div class="card__face card__face--front"></div>
@@ -21,17 +24,60 @@
     </div>
   </div>
 </div>
-<div class="resultArea {{menu ? 'reveal' : 'hide'}}">
+<div class="resultArea {{ menu ? 'reveal' : 'hide' }}">
   <div *ngIf="gameWon" class="result header">
-    <h1>{{clickCount}} klick</h1>
-    <h2>{{gameOverString}}</h2>
-    <small>Ditt highscore är {{preHighscore}} klick</small>
-    <button mat-raised-button color="accent" (click)="restart()" class="button">Spela!</button>
+    <h1>{{ clickCount }} klick</h1>
+    <h2>{{ gameOverString }}</h2>
+    <small>Ditt highscore är {{ preHighscore }} klick</small>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="restart()"
+      class="button"
+    >
+      Spela!
+    </button>
   </div>
   <div *ngIf="!gameWon" class="result header">
-      <h1>Memory</h1>
-      <p *ngIf="preHighscore != null">Ditt highscore är {{preHighscore}} klick</p>
-      <p *ngIf="preHighscore === null">Sätt ditt första highscore!</p>
-      <button mat-raised-button color="accent" (click)="startGame()" class="button">Spela!</button>
+    <h1>Memory</h1>
+    <p *ngIf="preHighscore != null">
+      Ditt highscore är {{ preHighscore }} klick
+    </p>
+    <p *ngIf="preHighscore === null">Sätt ditt första highscore!</p>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="startGame()"
+      class="button"
+    >
+      Spela!
+    </button>
+    <br /><br />
+    <!-- <mat-card *ngIf="(company$ | async) as comp">
+      <mat-card-title>Ditt namn</mat-card-title>
+      <mat-form-field class="example-full-width">
+        <input
+          type="text"
+          matInput
+          placeholder="Namn"
+          [(ngModel)]="comp.name"
+        />
+      </mat-form-field>
+      <mat-card-actions>
+        <button mat-button (click)="saveName(comp)" class="button">
+          Spara
+        </button>
+        <button mat-button (click)="editName(comp)" class="button">
+          Ändra
+        </button>
+      </mat-card-actions>
+    </mat-card> -->
+    <div *ngIf="(highscores$ | async) as score">
+      <mat-list role="list">
+        <mat-list-item role="listitem" *ngFor="let s of score">
+          {{s.score}} klick - {{s.name}}
+        </mat-list-item>
+      </mat-list>
     </div>
+  </div>
 </div>
